finished adding all photos, stylized the page and added a background image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,15 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-image: url("http://ll-c.ooyala.com/e1/U3d3duYjE6IP4_anJWRVn9mOBEO5I7FQ/promo322342056");
+  height: 275px;
+  padding: 70px;
   color: white;
 }
 
