--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,24 @@
 body {
+  background-color: #000;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+h1 {
+  font-size: 7em;
+  font-family: cursive;
+
+}
+
+h2 {
+  font-family: fantasy;
+
+}
+
+h3 {
+  font-family: fantasy;
+  color: #6f7277;
 }
 
 .navButton {
